index.css
body {
  margin: 0;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

/* default layout is for mobile */ 
.hero-searchbar {
  background: url('./assets/Hero\ -\ Desktop.jpg') no-repeat center top;
  background-size: contain;
  margin: 0 auto;
  max-width: 100%;
  min-height: 589px;
}

.hero-container {
  float: left;
  margin-top: 274px;
  padding-top: 30px;
  padding-bottom: 72px;
  text-align: left;
  color: white;
  background-color: #2b2d33;
  width: 100%;
}

.hero-headers {
  padding-left: 30px;
}

.hero-headers > h1 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 32px;
  font-weight: bold;
}

.hero-headers > p {
  font-size: 20px;
}

.hero-headers > p:nth-child(3) {
  text-decoration: underline;
}

.offer-text {
  font-size: 24px;
  font-weight: bold;
}

.search-container {
  width: 327px;
  height: 10px;
  background-color: white;
  border-radius: 10px;
  display: flex;
  align-items: center;
  padding: 20px;
}

.search-container > i {
  font-size: 20px;
  color: black;
}

.search-container > input {
  flex: 1;
  height: 40px;
  border: none;
  outline: none;
  font-size: 18px;
  padding-left: 10px;
  padding-top: 5px;
}

.flex-children-container {
  width: 100%;
  display: flex;
  align-items: center;
  margin: 0 auto;
  justify-content: center;
  flex-direction: column;
  gap: 30px;
}

.icon-heading {
  display: flex;
  padding-bottom: 30px;
}

/* when the screen width hits 1440px breakpoint, layout will change to web */
@media screen and (min-width: 1440px) {
  .hero-searchbar {
    min-height: 746px;
    max-width: 1440px;
  }
  .hero-container {
    margin-top: 185px;
    margin-left: 10px;
    margin-right: 10px;
    padding-bottom: 0px;
    background-color: transparent;
  }

  .hero-container h1 {
    font-size: 64px;
    font-weight: bold;
    padding-bottom: 30px;
    margin-bottom:0;
  }

  .hero-container p {
    font-size: 24px;
    font-weight: normal;
    padding-top: 0px;
    padding-bottom: 30px;
    margin: 0;
  }
  .deals-text {
    visibility: hidden;
  }

  .offer-text {
    color: white;
    text-align: left;
    position: relative;
    padding-top: 50px;
    font-size: 35px;
    font-weight: bold;
  }

  .flex-children-container {
    flex-direction: row;
    justify-content: center;
  }
}

